import io.github.fvarrui.javapackager.gradle.PackageTask
import org.jetbrains.kotlin.gradle.tasks.KotlinCompile

buildscript {
    repositories {
        mavenLocal()
        mavenCentral()
    }
    dependencies {
        classpath 'io.github.fvarrui:javapackager:1.7.5'
    }
}

plugins {
    id 'java'
    id 'application'
    id 'org.jetbrains.kotlin.jvm' version '1.9.0'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}


javafx {
    version = jfxVersion
    modules = ['javafx.controls', 'javafx.swing']
}

apply plugin: 'io.github.fvarrui.javapackager.plugin'

group = 'indi.nonoas'
version = '1.3.3'

sourceCompatibility = '17'

// 命令行指定要打包的可选模块
def selectedModules = []
if (project.hasProperty("modules")) {
    selectedModules = project.property("modules").split(",").collect { it.trim() }.findAll { it }
}
println "Selected optional modules: $selectedModules"

allprojects {
    repositories {
        mavenLocal()
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'
    apply plugin: 'org.jetbrains.kotlin.jvm'

    sourceCompatibility = '17'
    targetCompatibility = '17'

    // Kotlin jvmTarget
    tasks.withType(KotlinCompile).configureEach {
        kotlinOptions.jvmTarget = "17"
    }

    // 公共依赖
    dependencies {
        implementation "org.jetbrains.kotlin:kotlin-stdlib:1.9.0"
        implementation 'org.apache.logging.log4j:log4j-core:2.20.0'
        implementation 'org.quartz-scheduler:quartz:2.3.2'
        implementation 'com.h2database:h2:2.2.220'
        implementation 'com.alibaba.fastjson2:fastjson2:2.0.47'
        implementation 'org.freemarker:freemarker:2.3.30'
        implementation 'org.flywaydb:flyway-core:10.12.0'
        implementation 'cn.hutool:hutool-db:5.8.25'
        implementation 'com.googlecode.juniversalchardet:juniversalchardet:1.0.3'
        implementation 'io.github.nonoas:jfx-flat-ui:1.0.3'
        implementation 'io.github.mkpaz:atlantafx-base:2.0.1'
        implementation "org.openjfx:javafx-controls:21.0.3"
        implementation 'com.google.code.gson:gson:2.8.9'
        implementation 'org.slf4j:slf4j-api:2.0.9'
        implementation 'org.yaml:snakeyaml:2.2'
    }

    // 非 platform 模块都引入 platform
    if (project.name != platformName) {
        dependencies {
            implementation project(":$platformName")
        }
    }
}

application {
    mainClass = 'indi.nonoas.worktools.MainKt'   // 来自 platform
}

dependencies {
    implementation project(":$platformName")
    implementation project(":modules:boot-launcher")
}

tasks.named("run") {
    dependsOn(":platform:classes")
    mainClass = mainClassName

    doFirst {
        def p = project(":platform")
        def jfx = p.javafx
        def jfxPath = "${p.buildDir}/javafx-sdk-${jfx.version}/lib"

        jvmArgs += [
                "--module-path", jfxPath,
                "--add-modules", jfx.modules.join(",")
        ]
    }
}


// 统一打包 thin jar + libs
tasks.register('packageMyApp', PackageTask) {
    dependsOn clean

    // 打包哪些模块：platform 必选 + 可选模块
    def modulesToInclude = [':platform', ':modules:boot-launcher'] + selectedModules
    println "Modules to package: $modulesToInclude"

    // 确保子模块先 build
    dependsOn modulesToInclude.collect { ":$it:build" }

    mainClass = mainClassName

    // Java 模块配置
    modules = ["java.base", "java.management", "java.net.http", "java.scripting", "java.sql",
               "java.naming", "jdk.jsobject", "jdk.unsupported", "jdk.unsupported.desktop", "jdk.xml.dom"]

    bundleJre = true
    generateInstaller = false
    administratorRequired = false

    winConfig {
        createZipball = true
    }
}
